--- a/test.html
+++ b/test.html
@@ -17,6 +17,29 @@
 	</head>
 
 	<body>
+		<nav class="navbar fixed-top navbar-inverse">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a class="navbar-brand media" href="/index.html"></a>
+						<img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
+					</a>
+					<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse" id="navbar">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="/index.html">Home</a></li>
+						<li><a href="#">Works</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">Misc</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
 		<div class="container-fluid">
 
