--- a/index.html
+++ b/index.html
@@ -27,41 +27,46 @@
   <div include-html="nav.html"></div>
 
   <div class="main">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators" style="z-index: 1;">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="img/mountains.png">
-          <div class="carousel-caption">
-            <h1>big succ</h1>
-            <br>
-            <button type="button" class="btn btn-default">button boi</button>
+    <div id="highlights" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#highlights" data-slide-to="0"></li>
+          <li data-target="#highlights" data-slide-to="1" class="active"></li>
+          <li data-target="#highlights" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="img/mountains.png" alt="First slide">
+            <div class="carousel-caption">
+              <h1>big succ</h1>
+              <br>
+              <button type="button" class="btn btn-default">button boi</button>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/snow.png" alt="Second slide">
+            <div class="carousel-caption"></div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/red.png" alt="Third slide">
+            <div class="carousel-caption"></div>
           </div>
         </div>
-        <div class="item">
-          <img src="img/snow.png">
-          <div class="carousel-caption"></div>
-        </div>
-        <div class="item">
-          <img src="img/red.png">
-          <div class="carousel-caption"></div>
-        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"></a>
-      <span class="sr-only">Previous</span>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"></a>
-      <span class="sr-only">Next</span>
-    </div>
 
     <div class="container-fluid">
       <div class="grid" id="anchor">
 
       </div>
     </div>
+  </div>
 
   <div include-html="footer.html"></div>
 </body>
