--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,7 @@
         <img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
       </a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon fas fa-bars"></span>
       </button>
     </div>
     <div class="collapse.navbar-collapse" id="navbar">
