--- a/nav.html
+++ b/nav.html
@@ -1,21 +1,19 @@
-<nav class="navbar fixed-top navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand media" href="/index.html"></a>
-        <img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
-      </a>
-      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
-        <span class="navbar-toggler-icon fas fa-bars"></span>
-      </button>
-    </div>
-    <div class="collapse.navbar-collapse" id="navbar">
-      <ul class="nav navbar-nav navbar-right">
+<div class="pos-f-t">
+  <div class="collapse" id="navbar">
+    <ul class="nav navbar-nav navbar-right">
         <li><a href="/index.html">Home</a></li>
         <li><a href="#">Works</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Misc</a></li>
       </ul>
-    </div>
   </div>
-</nav>
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand media" href="/index.html"></a>
+      <img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon fas fa-bars"></span>
+    </button>
+  </nav>
+</div>
