--- a/nav.html
+++ b/nav.html
@@ -6,14 +6,14 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="fas fa-bars"></span>
     </button>
-    <div class="collapse" id="navbar">
-      <ul class="nav navbar-nav navbar-right">
+  </nav>
+  <div class="collapse" id="navbar">
+      <ol class="nav navbar-nav navbar-right">
         <li><a href="/index.html">Home</a></li>
         <li><a href="#">Works</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Misc</a></li>
-      </ul>
+      </ol>
    </div>
-  </nav>
 </div>
