--- a/nav.html
+++ b/nav.html
@@ -3,17 +3,27 @@
     <a class="navbar-brand media" href="/index.html">
       <img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="fas fa-bars"></span>
-    </button>
+    </button> -->
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <span class="fas fa-bars"></span>
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+      </div>
+    </div>
   </nav>
   <div class="collapse" id="navbar">
-      <ol class="nav navbar-nav navbar-right">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="#">Works</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Misc</a></li>
-      </ol>
-   </div>
+    <ol class="nav navbar-nav navbar-right">
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="#">Works</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">Misc</a></li>
+    </ol>
+  </div>
 </div>
