--- a/nav.html
+++ b/nav.html
@@ -12,7 +12,7 @@
         <a class="dropdown-item" href="#">Works</a>
         <a class="dropdown-item" href="#">About</a>
         <a class="dropdown-item" href="#">Contact</a>
-        <a class="dropdown-item" href="#">Misc/a>
+        <a class="dropdown-item" href="#">Misc</a>
       </div>
     </div>
   </nav>
