--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
     <div class="grid" id="anchor">
       <div class="grid-sizer"></div>
-<article class="grid-item processing"><a href="/posts/doublepend.png"><section><div id="vignette"><span>Double Pendulum - Chaotic Motion - </span><span class="date">17/8/2018</span><hr><h4>processing</h4></div></section></a></article>
+<article class="grid-item processing"><a href="/posts/Double Pendulum - Chaotic Motion.html"><img src="/img/doublepend.png"><section><div id="vignette"><span>Double Pendulum - Chaotic Motion - </span><span class="date">17/8/2018</span><hr><h4>processing</h4></div></section></a></article>
       <article></article>
     </div>
   </div>
