--- a/test.html
+++ b/test.html
@@ -30,60 +30,33 @@
 
 	<div class="main">
 		<div class="container-fluid">
-			<h1>Flickity - keyhole parallax</h1>
-
-			<section class="carousel">
-				<div class="carousel-main">
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" alt="orange tree" />
-					</div>
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" alt="One World Trade" />
-					</div>
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" alt="drizzle" />
-					</div>
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" alt="cat nose" />
-					</div>
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/contrail.jpg" alt="contrail" />
-					</div>
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/golden-hour.jpg" alt="golden hour" />
-					</div>
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/flight-formation.jpg" alt="flight formation" />
-					</div>
-				</div>
-
-				<div class="carousel-nav">
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" alt="orange tree" />
-					</div>
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" alt="One World Trade" />
-					</div>
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" alt="drizzle" />
-					</div>
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" alt="cat nose" />
-					</div>
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/contrail.jpg" alt="contrail" />
-					</div>
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/golden-hour.jpg" alt="golden hour" />
-					</div>
-					<div class="carousel-cell">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/flight-formation.jpg" alt="flight formation" />
-					</div>
-				</div>
-			</section>
-
+			<div style="height: 2000px;">
+				Element with some height so that the page can scroll.
+			</div>
 		</div>
 	</div>
+	<footer>
+		<div class="row footer-wrapper">
+			<div class="col-sm-4">
+				<h3>Contact</h3>
+				<br>
+				<h4>Email: email here</h4>
+			</div>
+			<div class="col-sm-4">
+				<h3>Socials</h3>
+				<br>
+				<a href="#" class="fab fa-facebook"></a>
+				<a href="#" class="fab fa-google"></a>
+				<a href="https://github.com/inferrinizzard" class="fab fa-github"></a>
+				<a href="#" class="fab fa-youtube"></a>
+			</div>
+			<div class="col-sm-4">
+				<h3>Bun</h3>
+				<br>
+				<img src="/img/bunny.png" class="icon">
+			</div>
+		</div>
+	</footer>
 	</body>
 
 </html>
