--- a/resume/resume.html
+++ b/resume/resume.html
@@ -4,6 +4,7 @@
 		<title>Sean Song's Resume</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
 
 		<link rel="stylesheet" href="/css/bootstrap.min.css">
 		<script src="/js/jquery.min.js"></script>
