--- a/nav.html
+++ b/nav.html
@@ -18,6 +18,7 @@
         <a href="/about.html">About</a>
       </li>
       <li class="nav-item">
+				<!-- <a href="/contact.html">Contact</a> -->
         <a href="#">Contact</a>
       </li>
       <li class="nav-item">
