--- a/resume/resume.html
+++ b/resume/resume.html
@@ -128,6 +128,8 @@
 				<h3>Awards</h3>
 				<div>&#x2B29 2018 National AP Scholar, AP Scholar with Honor and Distinction</div>
 				<div>&#x2B29 2017 AP Scholar with Honor and Distinction</div>
+				<div>&#x2B29 2018 President's Volunteer Service Award, Group and Individual-Silver (WMCA)</div>
+				<div>&#x2B29 2017 President's Volunteer Service Award, Group and Indivudal-Bronze (WMCA)</div>
 			</div>
 			<div class="reference">
 				<h3>References</h3>
